--- a/Strat-Report-Notebook.ipynb
+++ b/Strat-Report-Notebook.ipynb
@@ -50,10 +50,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "equity_bmk = 'M1WD'\n",
-    "\n",
+    "equity_bmk = 'SPTR'\n",
+    "strat_drop_list = ['99%/90% Put Spread','Down Var', 'VOLA', 'Dynamic Put Spread', 'VRR',\n",
+    "       'GW Dispersion', 'Corr Hedge', 'Def Var']\n",
+    "include_fi = False\n",
     "#create returns data dictionary for equity benchmark\n",
-    "bmks_dict= dm.get_equity_hedge_returns(equity_bmk, only_equity=True)"
+    "vortex_dict= dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08a3fee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ubs_vortex= dm.get_new_strategy_returns_data('Convixity Timeseries_8.5.21.xlsx',\n",
+    "                                           sheet_name = \"Index\")\n",
+    "barclays_vortex= dm.get_new_strategy_returns_data('Barclays_Volatility_Convexity_New_Iterations_08042021.xlsx',\n",
+    "                                           sheet_name = \"Index\")\n",
+    "vortex_data = dm.merge_data_frames(ubs_vortex, barclays_vortex)\n",
+    "vortex_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6062de5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "barclays_vortex.head()"
    ]
   },
   {
@@ -75,14 +102,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data= dm.get_new_strategy_returns_data( report_name = \"Credit Suisse_SX5E_Tail_FSFVA_20210528_UPS Pension.xlsx\", \n",
-    "                                           sheet_name = \"data\")\n",
+    "# ubs_vortex= dm.get_new_strategy_returns_data( dm.NEW_DATA+'Convixity Timeseries_8.5.21.xlsx'\n",
+    "#                                            sheet_name = \"Series\")\n",
+    "# barclays_vortex= dm.get_new_strategy_returns_data( dm.NEW_DATA+'Barclays_Volatility_Convexity_New_Iterations_08042021.xlsx'\n",
+    "#                                            sheet_name = \"New Iterations\")\n",
     "\n",
     "#create returns data dictionary for strategy\n",
-    "new_data_dict = dm.get_data_dict(new_data,'index')\n",
+    "new_data_dict = dm.get_data_dict(vortex_data, data_type='returns')\n",
     "\n",
     "#merge dictionaries\n",
-    "ret_data_dict = dm.merge_dicts(bmks_dict,new_data_dict)"
+    "ret_data_dict = dm.merge_dicts(vortex_dict,new_data_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d634317",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ret_data_dict['Monthly'].columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec1e824",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key in ret_data_dict:\n",
+    "    print(ret_data_dict[key].head())"
    ]
   },
   {
@@ -333,10 +383,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strat_report = 'Strat_Report'\n",
+    "strat_report = 'Vortex_analysis_08_16_2021'\n",
     "selloffs = True\n",
     "rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6546526",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
