--- a/powis_notebook.ipynb
+++ b/powis_notebook.ipynb
@@ -234,8 +234,9 @@
    "source": [
     "#def_dict = summary.get_norm_hedge_metrics(def_data)\n",
     "def_dict = {}\n",
-    "# file_name = 'def_uni_hedge_metrics.xlsx', more_metrics=False\n",
-    "file_name = 'def_uni_hedge_metrics_more.xlsx', more_metrics=True\n",
+    "file_name = 'def_uni_hedge_metrics.xlsx'\n",
+    "more_metrics=False\n",
+    "# file_name = 'def_uni_hedge_metrics_more.xlsx', more_metrics=True\n",
     "for key in hm_dict:\n",
     "    def_dict[key] = pd.read_excel(dm.EQUITY_HEDGE_DATA+file_name, sheet_name=key, index_col=0)"
    ]
@@ -322,8 +323,8 @@
     "    fig.add_trace(go.Scatter(\n",
     "        x=index_1,\n",
     "        y=strategies_only[col],\n",
-    "        marker=dict(size = 14, color = color[col]),\n",
-    "#          marker_symbol = symbols[col],\n",
+    "        marker=dict(size = 20, color = color[col]),\n",
+    "        marker_symbol = symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
     "        ))\n",
@@ -501,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
