--- a/normalizing_data.ipynb
+++ b/normalizing_data.ipynb
@@ -159,8 +159,8 @@
     "    fig.add_trace(go.Scatter(\n",
     "        x=index,\n",
     "        y=df_normal[col],\n",
-    "        marker=dict(size = 20, color = color[col]),\n",
-    "        marker_symbol = symbols[col],\n",
+    "        marker=dict(size = 12, color = color[col]),\n",
+    "#         marker_symbol = symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
     "        ))\n",
@@ -374,8 +374,8 @@
     "    fig.add_trace(go.Scatter(\n",
     "        x=index,\n",
     "        y=def_normal[col],\n",
-    "        marker=dict(size = 20, color = new_color[col]),\n",
-    "        marker_symbol = new_symbols[col],\n",
+    "        marker=dict(size = 12, color = new_color[col]),\n",
+    "#         marker_symbol = new_symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
     "        ))\n",
@@ -428,6 +428,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
