--- a/powis_notebook.ipynb
+++ b/powis_notebook.ipynb
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "more_metrics=True\n",
+    "more_metrics=False\n",
     "hm_dict = summary.get_norm_hedge_metrics(weekly_ret, notional_weights, weighted=True,more_metrics=more_metrics)"
    ]
   },
@@ -214,7 +214,7 @@
     "def_uni = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni.xlsx',sheet_name='Weekly', index_col=0)\n",
     "def_uni.drop([\"VIX Calls\",\"SG Inflation Proxy\"], inplace = True, axis = 1)\n",
     "df_weighted_hedges = util.get_weighted_hedges(weekly_ret, notional_weights)\n",
-    "def_data = dm.merge_data_frames(def_uni, df_weighted_hedges)"
+    "def_data = dm.merge_data_frames(df_weighted_hedges,def_uni)"
    ]
   },
   {
@@ -323,8 +323,8 @@
     "    fig.add_trace(go.Scatter(\n",
     "        x=index_1,\n",
     "        y=strategies_only[col],\n",
-    "        marker=dict(size = 20, color = color[col]),\n",
-    "        marker_symbol = symbols[col],\n",
+    "        marker=dict(size = 12, color = color[col]),\n",
+    "#         marker_symbol = symbols[col],\n",
     "        mode= \"markers\",\n",
     "        name=col\n",
     "        ))\n",
@@ -341,7 +341,7 @@
     "    titlefont = {\"size\":24},\n",
     "        xaxis = dict(tickfont = dict(size=14)),\n",
     "#     legend_title=\"Strategies\",\n",
-    "    showlegend=False,\n",
+    "    showlegend=True,\n",
     "    plot_bgcolor='White'\n",
     "                 )\n",
     "\n",
@@ -364,8 +364,7 @@
     "quartile_df = def_dict['Normalized Data'].quantile([0,.25,.5,.75,1], axis=0)\n",
     "# quartile_df = def_dict['Normalized Data'].quantile([0,.5,1], axis=0)\n",
     "strats_list=[]\n",
-    "col_list = list(quartile_df.columns)\n",
-    "col_list"
+    "col_list = list(quartile_df.columns)\n"
    ]
   },
   {
@@ -383,8 +382,7 @@
     "        strat = col_series.index[col_series >= quartile][0]\n",
     "        if strat not in strats_list:\n",
     "            if strat not in df_weighted_hedges.columns:\n",
-    "                strats_list.append(strat)\n",
-    "strats_list"
+    "                strats_list.append(strat)\n"
    ]
   },
   {
@@ -395,8 +393,7 @@
    "outputs": [],
    "source": [
     "new_list = strats_list+ list(df_weighted_hedges.columns)\n",
-    "new_list.remove('SPTR')\n",
-    "new_list"
+    "new_list.remove('SPTR')\n"
    ]
   },
   {
@@ -408,8 +405,7 @@
    "source": [
     "def_hm = def_dict['Hedge Metrics'].copy()\n",
     "def_n = def_dict['Normalized Data'].copy()\n",
-    "def_n = def_n.loc[new_list,:]\n",
-    "def_n"
+    "def_n = def_n.loc[new_list,:]\n"
    ]
   },
   {
@@ -503,6 +499,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
