--- a/Strategy Analysis/VRR_Trend.ipynb
+++ b/Strategy Analysis/VRR_Trend.ipynb
@@ -5,8 +5,8 @@
    "id": "c8efc831",
    "metadata": {},
    "source": [
-    "# VRR Trend Strategy Report Notebook\n",
-    "This notebok runs analysis on a given strategy."
+    "# VRR Trend Analysis\n",
+    "This notebok runs analysis on the VRR Trend strategy."
    ]
   },
   {
@@ -28,6 +28,7 @@
     "os.chdir('..')\n",
     "\n",
     "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "from EquityHedging.datamanager import data_manager as dm\n",
     "from EquityHedging.analytics import summary\n",
     "from EquityHedging.reporting.excel import reports as rp\n",
@@ -65,7 +66,7 @@
    "id": "f3003426",
    "metadata": {},
    "source": [
-    "## Import VRR, VRR2, VRR Trend Data and merge to Bmks"
+    "## Import VRR, VRR2, VRR Trend Data and Display Historical Performance"
    ]
   },
   {
@@ -76,6 +77,42 @@
    "outputs": [],
    "source": [
     "vrr = pd.read_excel(dm.NEW_DATA+'vrr_data.xlsx', sheet_name='data', index_col=0)\n",
+    "fig = go.Figure()\n",
+    "for strat in vrr.columns:\n",
+    "    fig.add_trace(go.Scatter(x = pd.to_datetime(vrr.index, format = '%m/%d/%Y'),\n",
+    "                             y = vrr[strat],mode = 'lines',name = strat))\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"<b>Historical Performance</b>\",\n",
+    "        'y':0.9,\n",
+    "        'x':0.5,'xanchor': 'center','yanchor': 'top'\n",
+    "    },\n",
+    "    title_font_family=\"Calibri\",\n",
+    "    titlefont = {\"size\":20},\n",
+    "    xaxis = dict(tickfont = dict(size=14)),\n",
+    "    showlegend=True,\n",
+    "    plot_bgcolor='White'\n",
+    "    )\n",
+    "fig.update_xaxes(showline=True,linewidth=2,linecolor='black',mirror=False)\n",
+    "fig.update_yaxes(showline=True,linewidth=2,linecolor='black',mirror=False)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e28d40d5",
+   "metadata": {},
+   "source": [
+    "## Add VRR+Trend tracks and merge to Bmk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b66110fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "vrr['VRR+Trend (25/75)'] = vrr['VRR']*0.25 + vrr['VRR Trend']*0.75\n",
     "vrr['VRR+Trend (50/50)'] = vrr['VRR']*0.5 + vrr['VRR Trend']*0.5\n",
     "vrr['VRR+Trend (67/33)'] = vrr['VRR']*(2/3) + vrr['VRR Trend']*(1/3)\n",
@@ -84,28 +121,6 @@
     "vrr['VRR+Trend (100/50)'] = vrr['VRR'] + vrr['VRR Trend']*.5\n",
     "vrr_dict = dm.get_data_dict(vrr)\n",
     "ret_data_dict = dm.merge_dicts(ret_dict, vrr_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2abac9d5",
-   "metadata": {},
-   "source": [
-    "## View Returns Data\n",
-    "Select frequency (Daily, Weekly, Monthly, Yearly) to view data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "416b71a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "freq_list = ['Daily', 'Weekly', 'Monthly','Quarterly', 'Yearly']\n",
-    "@interact\n",
-    "def display_returns(frequency = freq_list):\n",
-    "    return fmt.get_returns_styler(ret_data_dict[frequency])"
    ]
   },
   {
@@ -669,14 +684,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc3d67a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "fd2d66dd",
    "metadata": {},
@@ -719,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   },
   "varInspector": {
    "cols": {
