--- a/Strategy Analysis/VRR_Trend.ipynb
+++ b/Strategy Analysis/VRR_Trend.ipynb
@@ -183,7 +183,7 @@
    "id": "614c7916",
    "metadata": {},
    "source": [
-    "## Compute Return Stats and hedge Metrics"
+    "## Compute Return Stats and Hedge Metrics"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
-    "analytics_dict = summary.get_analytics_data(ret_data_dict)"
+    "analytics_dict = summary.get_analytics_data(ret_data_dict,include_fi=True)"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "source": [
     "strat_report = 'vrr_trend'\n",
     "selloffs = True\n",
-    "rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
+    "# rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
    ]
   },
   {
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "corr_freq_list = ['Weekly', 'Monthly']\n",
-    "corr_dict = summary.get_corr_data(wh_ret, corr_freq_list)"
+    "corr_dict_wh = summary.get_corr_data(wh_ret, corr_freq_list)"
    ]
   },
   {
@@ -532,7 +532,7 @@
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list,\n",
     "                         corr=['full', 'equity_down', 'equity_up'], plot_type=['heatmap', 'corrplot']):\n",
-    "    data = corr_dict[frequency]\n",
+    "    data = corr_dict_wh[frequency]\n",
     "    corr_df = data[False][corr][0]\n",
     "    if plot_type == 'heatmap':\n",
     "        return plots.draw_heatmap(corr_df, half=False)\n",
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
-    "analytics_dict = summary.get_analytics_data(wh_ret,analytics_freq_list)"
+    "analytics_dict_wh = summary.get_analytics_data(wh_ret,analytics_freq_list)"
    ]
   },
   {
@@ -578,7 +578,7 @@
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
-    "    data = analytics_dict[frequency]\n",
+    "    data = analytics_dict_wh[frequency]\n",
     "    analytics = data[False]\n",
     "    if stats == 'return_stats':\n",
     "        return fmt.get_analytics_styler(analytics)\n",
@@ -706,7 +706,7 @@
    "source": [
     "strat_report = 'weighted_hedges_vrr'\n",
     "selloffs = True\n",
-    "rp.generate_strat_report(strat_report, wh_ret, selloffs)"
+    "# rp.generate_strat_report(strat_report, wh_ret, selloffs)"
    ]
   }
  ],
@@ -726,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
