--- a/Strategy Analysis/VRR_Trend-25.ipynb
+++ b/Strategy Analysis/VRR_Trend-25.ipynb
@@ -5,8 +5,8 @@
    "id": "c8efc831",
    "metadata": {},
    "source": [
-    "# VRR Trend Analysis\n",
-    "This notebok runs analysis on the VRR Trend strategy."
+    "# VRR Trend (50% vs 25% vol) Analysis\n",
+    "This notebok runs analysis on the 25% varying vol VRR Trend strategy."
    ]
   },
   {
@@ -37,6 +37,14 @@
     "import pandas as pd\n",
     "\n",
     "RUN_REPORTS = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c41c33f8",
+   "metadata": {},
+   "source": [
+    "# Single Strats Analysis (VRR vs VRR2 vs VRR Trend - 50% vs VRR Trend - 25%)"
    ]
   },
   {
@@ -75,10 +83,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "08a3fee8",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "vrr = pd.read_excel(dm.NEW_DATA+'vrr_data.xlsx', sheet_name='data', index_col=0)\n",
+    "vrr = pd.read_excel(dm.NEW_DATA+'vrr_data.xlsx', sheet_name='data_25_pct', index_col=0)\n",
     "fig = go.Figure()\n",
     "for strat in vrr.columns:\n",
     "    fig.add_trace(go.Scatter(x = pd.to_datetime(vrr.index, format = '%m/%d/%Y'),\n",
@@ -102,6 +112,242 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee2a21b2",
+   "metadata": {},
+   "source": [
+    "## Merge Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51efd11d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vrr_dict = dm.get_data_dict(vrr)\n",
+    "ret_data_dict_1 = dm.merge_dicts(ret_dict, vrr_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0b01ffb",
+   "metadata": {},
+   "source": [
+    "# Compute Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a897774",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_freq_list = ['Weekly', 'Monthly']\n",
+    "corr_dict_1 = summary.get_corr_data(ret_data_dict_1, include_fi=include_fi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35cec4a0",
+   "metadata": {},
+   "source": [
+    "# Display Correlations\n",
+    "\n",
+    "Display Correlations of returns data by:\n",
+    "* **frequency (Monthly or Weekly)** - Show correlations of Monthly or Weekly returns\n",
+    "* **corr** - Show:\n",
+    "    * **full** - full history correaltions\n",
+    "    * **equity_down** - risk seeking benchmark downside returns correlations or \n",
+    "    * **equity_up** - risk seeking benchmark upside returns correlations\n",
+    "* **plot_type (corrplot or heatmap)** - Show a map with magnitude or just heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8430690",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_correlations(frequency=corr_freq_list,\n",
+    "                         corr=['full', 'equity_down', 'equity_up'], plot_type=['heatmap', 'corrplot']):\n",
+    "    data = corr_dict_1[frequency]\n",
+    "    corr_df = data[False][corr][0]\n",
+    "    if plot_type == 'heatmap':\n",
+    "        return plots.draw_heatmap(corr_df, half=False)\n",
+    "    else:\n",
+    "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fe1bf49",
+   "metadata": {},
+   "source": [
+    "## Compute Return Stats and Hedge Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ad14364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analytics_freq_list = ['Weekly', 'Monthly']\n",
+    "analytics_dict_1 = summary.get_analytics_data(ret_data_dict_1,include_fi=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "747fcb4d",
+   "metadata": {},
+   "source": [
+    "## Display Return Stats and Hedge Metrics\n",
+    "Display Returns Analytics data by:\n",
+    "* **frequency (Monthly or Weekly)** - Show Monthly or Weekly returns\n",
+    "* **stats (return_stats, hedge_metrics)** - Show:\n",
+    "    * Return Statistics or \n",
+    "    * Hedge Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48dae4db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
+    "    data = analytics_dict_1[frequency]\n",
+    "    analytics = data[False]\n",
+    "    if stats == 'return_stats':\n",
+    "        return fmt.get_analytics_styler(analytics)\n",
+    "    if stats == 'hedge_metrics':\n",
+    "        if frequency == 'Weekly':\n",
+    "            return fmt.get_analytics_styler(analytics, stats, '1W')\n",
+    "        else:\n",
+    "            return fmt.get_analytics_styler(analytics, stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6803c4f",
+   "metadata": {},
+   "source": [
+    "## Compute Historical Sell Offs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d873825",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_dict_1 = summary.get_hist_data(ret_data_dict_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0566a4c",
+   "metadata": {},
+   "source": [
+    "## Display Historical Sell Offs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b49e346e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_selloffs():\n",
+    "    df_hist = hist_dict_1[False]\n",
+    "    return fmt.get_hist_styler(df_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59e2d4a9",
+   "metadata": {},
+   "source": [
+    "## Compute Quintile or Decile Analysis\n",
+    "Display grouped data by:\n",
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles\n",
+    "* **bmk** - Equity or FI bmk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce2aac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_list=['Quintile','Decile']\n",
+    "bmk_list = list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[0:2]\n",
+    "@interact\n",
+    "def display_returns(group = group_list, bmk = bmk_list):\n",
+    "    quintile_df = summary.get_grouped_data(ret_data_dict_1, group = group, strat = bmk)\n",
+    "    return(quintile_df.style.format(\"{:.2%}\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd122ea8",
+   "metadata": {},
+   "source": [
+    "## Display Quintile or Decile Analysis\n",
+    "Display Quintile Analysis Bar Chart:\n",
+    "* **group (Quintile or Decile)** - Show returns data in quintiles or deciles\n",
+    "* **strat** - Show quintile or decile for selected strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d1c3f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "\n",
+    "def display_quintile_analysis(group = group_list,bmk = bmk_list, strat=list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[2:]):    \n",
+    "    df = summary.get_grouped_data(ret_data_dict_1, group = group, strat=bmk)\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        if not (col == bmk or col ==strat):\n",
+    "            df.drop([col], axis=1, inplace=True)\n",
+    "    if group == \"Quintile\":\n",
+    "        title ='Quintile Analysis'\n",
+    "    else:\n",
+    "        title = 'Decile Analysis'\n",
+    "        \n",
+    "    fig = px.bar(df,barmode='group',title = title)\n",
+    "    fig.show()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3129b96e",
+   "metadata": {},
+   "source": [
+    "# VRR + Trend Strategy Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e28d40d5",
    "metadata": {},
    "source": [
@@ -115,14 +361,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vrr['VRR+Trend (25/75)'] = vrr['VRR']*0.25 + vrr['VRR Trend']*0.75\n",
-    "vrr['VRR+Trend (50/50)'] = vrr['VRR']*0.5 + vrr['VRR Trend']*0.5\n",
-    "vrr['VRR+Trend (67/33)'] = vrr['VRR']*(2/3) + vrr['VRR Trend']*(1/3)\n",
-    "vrr['VRR+Trend (75/25)'] = vrr['VRR']*.75 + vrr['VRR Trend']*.25\n",
-    "vrr['VRR+Trend (100/25)'] = vrr['VRR'] + vrr['VRR Trend']*.25\n",
-    "vrr['VRR+Trend (100/50)'] = vrr['VRR'] + vrr['VRR Trend']*.5\n",
-    "vrr_dict = dm.get_data_dict(vrr)\n",
-    "ret_data_dict = dm.merge_dicts(ret_dict, vrr_dict)"
+    "vrr_trend = vrr.copy()\n",
+    "vrr_trend['VRR+Trend-50% (85/15)'] = vrr_trend['VRR']*0.85 + vrr_trend['VRR Trend - 50%']*0.15\n",
+    "vrr_trend['VRR+Trend-50% (80/20)'] = vrr_trend['VRR']*0.8 + vrr_trend['VRR Trend - 50%']*0.2\n",
+    "vrr_trend['VRR+Trend-50% (75/25)'] = vrr_trend['VRR']*0.75 + vrr_trend['VRR Trend - 50%']*0.25\n",
+    "vrr_trend['VRR+Trend-50% (70/30)'] = vrr_trend['VRR']*0.7 + vrr_trend['VRR Trend - 50%']*0.3\n",
+    "vrr_trend['VRR+Trend-25% (85/15)'] = vrr_trend['VRR']*0.85 + vrr_trend['VRR Trend - 25%']*0.15\n",
+    "vrr_trend['VRR+Trend-25% (80/20)'] = vrr_trend['VRR']*0.8 + vrr_trend['VRR Trend - 25%']*0.2\n",
+    "vrr_trend['VRR+Trend-25% (75/25)'] = vrr_trend['VRR']*0.75 + vrr_trend['VRR Trend - 25%']*0.25\n",
+    "vrr_trend['VRR+Trend-25% (70/30)'] = vrr_trend['VRR']*0.7 + vrr_trend['VRR Trend - 25%']*0.3\n",
+    "vrr_trend = vrr_trend[['VRR','VRR+Trend-50% (85/15)', 'VRR+Trend-50% (80/20)', 'VRR+Trend-50% (75/25)', 'VRR+Trend-50% (70/30)',\n",
+    "           'VRR+Trend-25% (85/15)', 'VRR+Trend-25% (80/20)', 'VRR+Trend-25% (75/25)', 'VRR+Trend-25% (70/30)']]\n",
+    "vrr_trend_dict = dm.get_data_dict(vrr_trend)\n",
+    "ret_data_dict_2 = dm.merge_dicts(ret_dict, vrr_trend_dict)"
    ]
   },
   {
@@ -141,7 +392,7 @@
    "outputs": [],
    "source": [
     "corr_freq_list = ['Weekly', 'Monthly']\n",
-    "corr_dict = summary.get_corr_data(ret_data_dict, include_fi=include_fi)"
+    "corr_dict_2 = summary.get_corr_data(ret_data_dict_2, include_fi=include_fi)"
    ]
   },
   {
@@ -172,7 +423,7 @@
     "@interact\n",
     "def display_correlations(frequency=corr_freq_list,\n",
     "                         corr=['full', 'equity_down', 'equity_up'], plot_type=['heatmap', 'corrplot']):\n",
-    "    data = corr_dict[frequency]\n",
+    "    data = corr_dict_2[frequency]\n",
     "    corr_df = data[False][corr][0]\n",
     "    if plot_type == 'heatmap':\n",
     "        return plots.draw_heatmap(corr_df, half=False)\n",
@@ -196,7 +447,7 @@
    "outputs": [],
    "source": [
     "analytics_freq_list = ['Weekly', 'Monthly']\n",
-    "analytics_dict = summary.get_analytics_data(ret_data_dict,include_fi=True)"
+    "analytics_dict_2 = summary.get_analytics_data(ret_data_dict_2,include_fi=True)"
    ]
   },
   {
@@ -221,7 +472,7 @@
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
-    "    data = analytics_dict[frequency]\n",
+    "    data = analytics_dict_2[frequency]\n",
     "    analytics = data[False]\n",
     "    if stats == 'return_stats':\n",
     "        return fmt.get_analytics_styler(analytics)\n",
@@ -247,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist_dict = summary.get_hist_data(ret_data_dict)"
+    "hist_dict_2 = summary.get_hist_data(ret_data_dict_2)"
    ]
   },
   {
@@ -267,7 +518,7 @@
    "source": [
     "@interact\n",
     "def display_selloffs():\n",
-    "    df_hist = hist_dict[False]\n",
+    "    df_hist = hist_dict_2[False]\n",
     "    return fmt.get_hist_styler(df_hist)"
    ]
   },
@@ -290,10 +541,10 @@
    "outputs": [],
    "source": [
     "group_list=['Quintile','Decile']\n",
-    "bmk_list = list(ret_data_dict['Monthly'].select_dtypes('float').columns)[0:2]\n",
+    "bmk_list = list(ret_data_dict_2['Monthly'].select_dtypes('float').columns)[0:2]\n",
     "@interact\n",
     "def display_returns(group = group_list, bmk = bmk_list):\n",
-    "    quintile_df = summary.get_grouped_data(ret_data_dict, group = group, strat = bmk)\n",
+    "    quintile_df = summary.get_grouped_data(ret_data_dict_2, group = group, strat = bmk)\n",
     "    return(quintile_df.style.format(\"{:.2%}\"))"
    ]
   },
@@ -318,8 +569,8 @@
     "group_list=['Quintile','Decile']\n",
     "@interact\n",
     "\n",
-    "def display_quintile_analysis(group = group_list,bmk = bmk_list, strat=list(ret_data_dict['Monthly'].select_dtypes('float').columns)[2:]):    \n",
-    "    df = summary.get_grouped_data(ret_data_dict, group = group, strat=bmk)\n",
+    "def display_quintile_analysis(group = group_list,bmk = bmk_list, strat=list(ret_data_dict_2['Monthly'].select_dtypes('float').columns)[2:]):    \n",
+    "    df = summary.get_grouped_data(ret_data_dict_2, group = group, strat=bmk)\n",
     "    \n",
     "    for col in df.columns:\n",
     "        if not (col == bmk or col ==strat):\n",
@@ -356,7 +607,7 @@
    "outputs": [],
    "source": [
     "if RUN_REPORTS:\n",
-    "    strat_report = 'vrr_trend'\n",
+    "    strat_report = 'vrr_plus_trend'\n",
     "    selloffs = True\n",
     "    rp.generate_strat_report(strat_report, ret_data_dict, selloffs)"
    ]
@@ -418,8 +669,8 @@
    "source": [
     "returns = dm.merge_dicts(returns, vrr_dict)\n",
     "for key in returns:\n",
-    "    returns[key] = returns[key][['SPTR', 'Down Var', 'VOLA', 'Dynamic Put Spread', 'VRR','VRR Trend', 'GW Dispersion',\n",
-    "       'Corr Hedge', 'Def Var']]"
+    "    returns[key] = returns[key][['SPTR', 'Down Var', 'VOLA', 'Dynamic Put Spread', 'VRR','VRR Trend - 50%', \n",
+    "                                 'VRR Trend - 25%','GW Dispersion','Corr Hedge', 'Def Var']]"
    ]
   },
   {
@@ -438,15 +689,16 @@
    "outputs": [],
    "source": [
     "notional_dict = {\n",
-    "    'VRR':[19.0, 1.0, 1.0, 1.0, 1.0, 0.0, 1.0, 0.25, 1.0],\n",
-    "    'VRR Trend':[19.0, 1.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (25/75)':[19.0, 1.0, 1.0, 1.0, 0.25, 0.75, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (50/50)':[19.0, 1.0, 1.0, 1.0, 0.5, 0.5, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (67/33)':[19.0, 1.0, 1.0, 1.0, .67, 0.33, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (75/25)':[19.0, 1.0, 1.0, 1.0, 0.75, 0.25, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (100/25)':[19.0, 1.0, 1.0, 1.0, 1.0, 0.25, 1.0, 0.25, 1.0],\n",
-    "    'VRR+Trend (100/50)':[19.0, 1.0, 1.0, 1.0, 1.0, 0.5, 1.0, 0.25, 1.0],\n",
-    "}"
+    "    'VRR':[19.0, 1.0, 1.0, 1.0, 1.0, 0.0, 0.0, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-50% (85/15)':[19.0, 1.0, 1.0, 1.0, 0.85, 0.15, 0.0, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-50% (80/20)':[19.0, 1.0, 1.0, 1.0, 0.8, 0.2, 0.0, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-50% (75/25)':[19.0, 1.0, 1.0, 1.0, 0.75, 0.25, 0.0, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-50% (70/30)':[19.0, 1.0, 1.0, 1.0, 0.7, 0.3, 0.0, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-25% (85/15)':[19.0, 1.0, 1.0, 1.0, 0.85, 0.0, 0.15, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-25% (80/20)':[19.0, 1.0, 1.0, 1.0, 0.8, 0.0, 0.2, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-25% (75/25)':[19.0, 1.0, 1.0, 1.0, 0.75, 0.0, 0.25, 1.0, 0.25, 1.0],\n",
+    "    'VRR+Trend-25% (70/30)':[19.0, 1.0, 1.0, 1.0, 0.7, 0.0, 0.3, 1.0, 0.25, 1.0],\n",
+    "    }"
    ]
   },
   {
