Update Barclays Vortex + JPM Dynamic Vol.ipynb

--- a/Strategy Analysis/Barclays Vortex + JPM Dynamic Vol.ipynb
+++ b/Strategy Analysis/Barclays Vortex + JPM Dynamic Vol.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "import plotly.express as px\n",
     "from EquityHedging.datamanager import data_manager as dm\n",
-    "from EquityHedging.analytics import summary\n",
+    "from EquityHedging.analytics import summary, util\n",
     "from EquityHedging.reporting.excel import reports as rp\n",
     "from EquityHedging.reporting import formatter as fmt, plots\n",
     "from ipywidgets import interact, interact_manual\n",
@@ -189,6 +189,26 @@
     "def display_selloffs():\n",
     "    df_hist = full_data_hist_dict[False]\n",
     "    return fmt.get_hist_styler(df_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2da1176c",
+   "metadata": {},
+   "source": [
+    "## Create Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f424c4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strat_report = 'early_roll_vix_profit_data_analysis'\n",
+    "selloffs = True\n",
+    "rp.generate_strat_report(strat_report, full_data_dict, selloffs)"
    ]
   },
   {
@@ -362,6 +382,305 @@
     "        return plots.draw_heatmap(corr_df, half=False)\n",
     "    else:\n",
     "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9b4bfb",
+   "metadata": {},
+   "source": [
+    "# Equity Hedging Analysis\n",
+    "## Comparing with overal equity portfolio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b194d86c",
+   "metadata": {},
+   "source": [
+    "## Import returns data\n",
+    "\n",
+    "### Imports Daily, Weekly, Monthly, Quarterly and Yearly returns data\n",
+    "\n",
+    "To import the returns data:\n",
+    "* Select an Equity Benchmark (**equity_bmk**) - SPTR, M1WD, SX5T\n",
+    "* Decide if you want a Fixed Income Benchmark (**include_fi**) - True, False\n",
+    "* Select what equity hedging strategies to exclude (**strat_drop_list**). Below is the list of strategies:\n",
+    "\n",
+    "    * 99%/90% Put Spread, Down Var, Vortex, VOLA , Dynamic Put Spread, VRR, GW Dispersion, Corr Hedge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec1c9954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equity_bmk = 'SPTR'\n",
+    "include_fi = False\n",
+    "strat_drop_list = ['Vortex','99%/90% Put Spread']\n",
+    "returns = dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7d09766",
+   "metadata": {},
+   "source": [
+    "## Add 2W + 85% Profit strategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56563606",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_strategy = full_data[['2W + 85% Profit']]\n",
+    "new_strategy_dict = dm.get_data_dict(new_strategy, data_type = 'index')\n",
+    "returns = dm.merge_dicts(returns, new_strategy_dict)\n",
+    "new_strat=True\n",
+    "weighted = [True, False]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "209be73c",
+   "metadata": {},
+   "source": [
+    "## Get and display Notional Weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb32d9b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "notional_weights = [19,1,1.25,1,1,1,.25,1,.5]\n",
+    "df_weights = util.get_df_weights(notional_weights, list(returns['Monthly'].columns), include_fi)\n",
+    "fmt.get_notional_styler(df_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d44c7a1",
+   "metadata": {},
+   "source": [
+    "## Compute Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e779a861",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_freq_list = ['Weekly', 'Monthly']\n",
+    "corr_dict_1 = summary.get_corr_data(returns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73cf507",
+   "metadata": {},
+   "source": [
+    "## Display Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c4d212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_correlations(frequency=corr_freq_list,\n",
+    "                         corr=['full', 'equity_down', 'equity_up'], plot_type=['heatmap', 'corrplot']):\n",
+    "    data = corr_dict_1[frequency]\n",
+    "    corr_df = data[False][corr][0]\n",
+    "    if plot_type == 'heatmap':\n",
+    "        return plots.draw_heatmap(corr_df, half=False)\n",
+    "    else:\n",
+    "        return plots.draw_corrplot(corr_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27501d42",
+   "metadata": {},
+   "source": [
+    "## Compute Analytics (Return Stats and Hedge Metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94586f33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analytics_freq_list = ['Weekly', 'Monthly']\n",
+    "analytics_dict = summary.get_analytics_data(returns,analytics_freq_list,weighted,notional_weights,include_fi,new_strat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e5df08c",
+   "metadata": {},
+   "source": [
+    "## Display Analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f532454e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_analytics(frequency=analytics_freq_list, weighted=weighted, stats=['return_stats', 'hedge_metrics']):\n",
+    "    data = analytics_dict[frequency]\n",
+    "    analytics = data[weighted]\n",
+    "    if stats == 'return_stats':\n",
+    "        return fmt.get_analytics_styler(analytics)\n",
+    "    if stats == 'hedge_metrics':\n",
+    "        if frequency == 'Weekly':\n",
+    "            return fmt.get_analytics_styler(analytics, stats, '1W')\n",
+    "        else:\n",
+    "            return fmt.get_analytics_styler(analytics, stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d07b26c",
+   "metadata": {},
+   "source": [
+    "## Compute Historical Selloffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13c85398",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist_dict = summary.get_hist_data(returns,notional_weights=notional_weights, weighted=weighted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1026fa67",
+   "metadata": {},
+   "source": [
+    "## Display Historical Selloffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7491d12f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_selloffs(weighted=weighted):\n",
+    "    df_hist = hist_dict[weighted]\n",
+    "    return fmt.get_hist_styler(df_hist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4b00782",
+   "metadata": {},
+   "source": [
+    "## Compute Quintile or Decile Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e553610",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_list=['Quintile','Decile']\n",
+    "@interact\n",
+    "def display_returns(group = group_list):\n",
+    "    quintile_df = summary.get_grouped_data(returns, group = group)\n",
+    "    return(quintile_df.style.format(\"{:.2%}\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f27caa",
+   "metadata": {},
+   "source": [
+    "## Display Quintile or Decile Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b431e87c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@interact\n",
+    "def display_quintile_analysis(group = ['Quintile','Decile'], strat=list(returns['Monthly'].select_dtypes('float').columns)[1:]):    \n",
+    "    df = summary.get_grouped_data(returns, group = group)\n",
+    "    \n",
+    "    for col in df.columns:\n",
+    "        df[col] *= 100\n",
+    "        if not (col == equity_bmk or col ==strat):\n",
+    "            df.drop([col], axis=1, inplace=True)\n",
+    "    if group == \"Quintile\":\n",
+    "        title ='Quintile Analysis'\n",
+    "    else:\n",
+    "        title = 'Decile Analysis'\n",
+    "        \n",
+    "    fig = px.bar(df,barmode='group',title = title)\n",
+    "    fig.update_layout(\n",
+    "        title = {'text':\"<b>{}</b>\".format(title),'y':0.95,'x':0.5,'xanchor': 'center','yanchor': 'top'},\n",
+    "        title_font_family = \"Calibri\",\n",
+    "        titlefont = {\"size\":24},\n",
+    "        xaxis = dict(tickfont = dict(size=12)),\n",
+    "        yaxis = dict(ticksuffix=\"%\"),\n",
+    "        legend_title=\"Strategies\",\n",
+    "        plot_bgcolor='White'\n",
+    "    )\n",
+    "    fig.update_xaxes(title_font_family = \"Calibri\",title_text = \"<b>SPTR Monthly Returns Ranking</b>\",\n",
+    "        title_font = {\"size\": 20},showline=False,linewidth=2,linecolor='black',mirror=False)\n",
+    "    fig.update_yaxes(title_font_family = \"Calibri\",title_text = \"<b></b>\",title_font = {\"size\": 20},\n",
+    "        showline=True,linewidth=1,linecolor='black',mirror=False)\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7a6a8a",
+   "metadata": {},
+   "source": [
+    "## Create Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48470508",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equity_hedge_report = 'equity_hedge_analysis_barclays'\n",
+    "selloffs = True\n",
+    "rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
    ]
   }
  ],
