update jupyter notebooks

--- a/Strategy Analysis/Citi PR.ipynb
+++ b/Strategy Analysis/Citi PR.ipynb
@@ -37,7 +37,7 @@
     "from ipywidgets import interact, interact_manual\n",
     "import pandas as pd\n",
     "\n",
-    "RUN_REPORTS = False"
+    "RUN_REPORTS = True"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "outputs": [],
    "source": [
     "group_list=['Quintile','Decile']\n",
-    "bmk_list = list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[0:2]\n",
+    "bmk_list = list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[0:1]\n",
     "@interact\n",
     "def display_returns(group = group_list, bmk = bmk_list):\n",
     "    quintile_df = summary.get_grouped_data(ret_data_dict_1, group = group, strat = bmk)\n",
@@ -319,7 +319,7 @@
     "group_list=['Quintile','Decile']\n",
     "@interact\n",
     "\n",
-    "def display_quintile_analysis(group = group_list,bmk = bmk_list, strat=list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[2:]):    \n",
+    "def display_quintile_analysis(group = group_list,bmk = bmk_list, strat=list(ret_data_dict_1['Monthly'].select_dtypes('float').columns)[1:]):    \n",
     "    df = summary.get_grouped_data(ret_data_dict_1, group = group, strat=bmk)\n",
     "    \n",
     "    for col in df.columns:\n",
@@ -696,10 +696,19 @@
    "outputs": [],
    "source": [
     "if RUN_REPORTS:\n",
-    "    strat_report = 'weighted_hedges_citi'\n",
+    "    equity_hedge_report = 'weighted_hedges_citi_1'\n",
     "    selloffs = True\n",
-    "    rp.generate_strat_report(strat_report, returns, selloffs)"
+    "    notional_weights = [19,1,1.25,1,1,1,.25,1,0]\n",
+    "    rp.get_equity_hedge_report(equity_hedge_report, returns, notional_weights, include_fi, new_strat, weighted[0], selloffs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "541db841",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
