--- a/Strategy Analysis/barclays_vortex.ipynb
+++ b/Strategy Analysis/barclays_vortex.ipynb
@@ -5,21 +5,15 @@
    "id": "c8efc831",
    "metadata": {},
    "source": [
-    "# Barclays Vortex Analysis\n",
-    "This notebok runs analysis on the Barcalys Vortex (new3) strategy."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b9a2a56",
-   "metadata": {},
-   "source": [
+    "# Macquarie VRP Analysis\n",
+    "This notebok runs analysis on Macquaries VRP strategies.\n",
+    "\n",
     "## Import Libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b5afcd8f",
    "metadata": {},
    "outputs": [],
@@ -42,22 +36,39 @@
    "id": "a344d57a",
    "metadata": {},
    "source": [
-    "## Import Equity Benchmark & Vortex Data"
+    "## Import Equity Benchmark & UBS Def Var Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d12c51fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "equity_bmk = 'SPTR'\n",
-    "strat_drop_list = ['99%/90% Put Spread','Down Var', 'VOLA', 'Dynamic Put Spread', 'VRR',\n",
-    "       'GW Dispersion', 'Corr Hedge', 'Def Var']\n",
-    "include_fi = False\n",
     "#create returns data dictionary for equity benchmark\n",
-    "returns= dm.get_equity_hedge_returns(equity_bmk, include_fi, strat_drop_list)"
+    "returns= dm.get_equity_hedge_returns(equity_bmk, all_data=True)\n",
+    "for key in returns:\n",
+    "    returns[key] = returns[key][[equity_bmk,'Def Var (Fri)', 'Def Var (Mon)','Def Var (Wed)']]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b4cbca6e",
+   "metadata": {},
+   "source": [
+    "# VRP + TRP Analysis\n",
+    "Strats:\n",
+    "* VMAQWSP4\n",
+    "* VMAQDSP4\n",
+    "* VMAQWSP4 extended + Deferred TRP (“always on”)\n",
+    "* VMAQWSP4 extended + Front TRP (subject to VIX Signal)\n",
+    "* VMAQWSP4 extended + Combined TRP (Deferred + Front with dynamic VIX Signal)\n",
+    "* VMAQDSP4 extended + VMAQWSP4 extended + Deferred TRP (“always on”)\n",
+    "* VMAQDSP4 extended + VMAQWSP4 extended + Front TRP (subject to VIX Signal)\n",
+    "* VMAQDSP4 extended + VMAQWSP4 extended + Combined TRP (Deferred + Front with dynamic VIX Signal)"
    ]
   },
   {
@@ -65,51 +76,20 @@
    "id": "6987c181",
    "metadata": {},
    "source": [
-    "## Import new3 robust analysis data"
+    "## Import data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "fccadab0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_3_robust= pd.read_excel(dm.NEW_DATA+'Barclays_new3_robustness.xlsx',\n",
-    "                                           sheet_name = 'data', index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "48412f05",
-   "metadata": {},
-   "source": [
-    "## Create dictionary to slice data into params"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a8dd691",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_dict = {'max_vix':['new3', 'maxVIXDelta=0.65', 'maxVIXDelta=0.7','maxVIXDelta=0.75', \n",
-    "                       'maxVIXDelta=0.8', 'maxVIXDelta=0.85','maxVIXDelta=0.9', 'maxVIXDelta=1.1'],\n",
-    "           'short_put_strike': ['new3','shortPutStrikes=-0.35,-0.3,-0.25', \n",
-    "                                'shortPutStrikes=-0.3,-0.25,-0.2','shortPutStrikes=-0.2', 'shortPutStrikes=-0.25',\n",
-    "                                'shortPutStrikes=-0.3','shortPutStrikes=-0.35', 'shortPutStrikes=-0.4'],\n",
-    "           'long_put_strike':['new3', 'longSPXStrike=-0.1','longSPXStrike=-0.15'],\n",
-    "           'vix_strike':['new3', 'VIXStrike=0.2', 'VIXStrike=0.3'],\n",
-    "           'roll_dates':['new3', 'rollDates=-20,-15,-10,-5', 'rollDates=-15,-10,-5,0', \n",
-    "                         'rollDates=-10,-5,0,5', 'rollDates=0,5,10,15', 'rollDates=5,10,15,20']}\n",
-    "\n",
-    "#slice into diff params\n",
-    "params_dict = {}\n",
-    "for key in col_dict:\n",
-    "    temp_df = new_3_robust.copy()\n",
-    "    temp_df = temp_df[col_dict[key]]\n",
-    "    params_dict[key] = temp_df.copy()"
+    "vrp_trp = dm.get_new_strategy_returns_data('vrp_macq_data.xlsx', sheet_name='trp')\n",
+    "# vrp_trp = pd.read_excel(dm.NEW_DATA+'Barclays_new3_robustness.xlsx',\n",
+    "#                                            sheet_name = 'data', index_col=0)\n",
+    "# new_3_robust['rd_4+3'] = 0.5*new_3_robust['rollDates=-20,-15,-10,-5']+0.5*new_3_robust['rollDates=-15,-10,-5,0']"
    ]
   },
   {
@@ -130,19 +110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "f725bd0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "659a0464d13b4214b298e87a2721f5f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "params_df = params_dict['max_vix'].copy()\n",
+    "# params_df = params_dict['max_vix'].copy()\n",
     "\n",
     "@interact\n",
     "def display_performance():\n",
     "    fig = go.Figure()\n",
-    "    for strat in params_df.columns:\n",
-    "        fig.add_trace(go.Scatter(x = pd.to_datetime(params_df.index, format = '%m/%d/%Y'),\n",
-    "                                 y = params_df[strat],mode = 'lines',name = strat))\n",
+    "    for strat in vrp_trp.columns:\n",
+    "        fig.add_trace(go.Scatter(x = pd.to_datetime(vrp_trp.index, format = '%m/%d/%Y'),\n",
+    "                                 y = vrp_trp[strat],mode = 'lines',name = strat))\n",
     "    fig.update_layout(showlegend=True,plot_bgcolor='White')\n",
     "    fig.update_xaxes(showline=True,linecolor='black')\n",
     "    fig.update_yaxes(showline=True,linecolor='black')\n",
@@ -159,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a5600ab0",
    "metadata": {},
    "outputs": [],
@@ -185,10 +180,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ebb173f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12b15c162873420199482d7e2131964a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
@@ -221,10 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "db2a13a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "676fa43e96f54e6fa497f1128eea21a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "params_df =params_dict['short_put_strike'].copy()\n",
     "\n",
@@ -250,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4eb81f14",
    "metadata": {},
    "outputs": [],
@@ -276,10 +301,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8eca9a59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8ebddf45395d4c8db86439221ed5db92",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
@@ -312,10 +352,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1f2cd2ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "399971b14adc4b3fb8c9329c1237f00d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "params_df =params_dict['long_put_strike'].copy()\n",
     "\n",
@@ -341,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0252b959",
    "metadata": {},
    "outputs": [],
@@ -367,10 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "65c8610d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "61c5ca7543b843719ccc8e3cfb9d3e21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
@@ -403,10 +473,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "38082c19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b0beda577c843ebbcb3d7e9ac40e74a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "params_df =params_dict['vix_strike'].copy()\n",
     "\n",
@@ -432,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0ab1f8c9",
    "metadata": {},
    "outputs": [],
@@ -458,10 +543,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0fc4d24d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1de410fb72a48e08c547756ca2677e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
@@ -494,10 +594,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e6175196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "329a6401900b46a7a6fa7f66ba613aa7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "params_df =params_dict['roll_dates'].copy()\n",
     "\n",
@@ -523,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0dc55085",
    "metadata": {},
    "outputs": [],
@@ -549,14 +664,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c066ef92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "289e854d7af6438bb4f1439312baf2e2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='frequency', options=('Weekly', 'Monthly'), value='Weekly'), Dropdo…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_analytics(frequency=analytics_freq_list, stats=['return_stats', 'hedge_metrics']):\n",
-    "    data = vix_k_analytics_dict[frequency]\n",
+    "    data = rd_analytics_dict[frequency]\n",
     "    analytics = data[False]\n",
     "    if stats == 'return_stats':\n",
     "        return fmt.get_analytics_styler(analytics)\n",
@@ -577,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1a6ca4b3",
    "metadata": {},
    "outputs": [],
@@ -592,7 +722,7 @@
     "hist_dict = summary.get_hist_data(ret_data_dict)\n",
     "\n",
     "#slice for diff params\n",
-    "hist_list = list(hist_dict[False].columns)[0:2]\n",
+    "hist_list = list(hist_dict[False].columns)[0:3]\n",
     "for key in col_dict:\n",
     "    temp_list = hist_list + col_dict[key]\n",
     "    temp_hs = hist_dict[False].copy()\n",
@@ -610,15 +740,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "c3677d36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c6356f4756142f9b28dbd37416a699e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='params', options=(False, 'max_vix', 'short_put_strike', 'long_put_…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact\n",
     "def display_selloffs(params = [False]+list(col_dict.keys())):\n",
     "    df_hist = hist_dict[params]\n",
     "    return fmt.get_hist_styler(df_hist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "05439911",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b12f1695a3ca40ed967d9ac2838bfcf1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Output(),), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "params_df = params_dict['max_vix'].copy()\n",
+    "\n",
+    "@interact\n",
+    "def display_performance():\n",
+    "    fig = go.Figure()\n",
+    "    for strat in params_df.columns:\n",
+    "        fig.add_trace(go.Scatter(x = pd.to_datetime(params_df.index, format = '%m/%d/%Y'),\n",
+    "                                 y = params_df[strat],mode = 'lines',name = strat))\n",
+    "    fig.update_layout(showlegend=True,plot_bgcolor='White')\n",
+    "    fig.update_xaxes(showline=True,linecolor='black')\n",
+    "    fig.update_yaxes(showline=True,linecolor='black')\n",
+    "    fig.show()"
    ]
   },
   {
@@ -637,10 +818,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9637c5b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing Monthly Analytics...\n",
+      "Computing Weekly Analytics...\n",
+      "Computing Historical SellOffs...\n",
+      "Computing Normalized Hedge Metrics...\n",
+      "\"new_3_robustness.xlsx\" report generated in \"C:\\Users\\NVG9HXP\\Documents\\Projects\\RMP\\EquityHedging\\reports\\\" folder\n"
+     ]
+    }
+   ],
    "source": [
     "strat_report_1 = 'new_3_robustness'\n",
     "selloffs = True\n",
@@ -664,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.10"
   },
   "varInspector": {
    "cols": {
