added more indices (cslab mgd futs)

--- a/Liq_Alts/benchmarking.ipynb
+++ b/Liq_Alts/benchmarking.ipynb
@@ -23,6 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "\n",
     "from ipywidgets import interact, interact_manual\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -53,15 +56,19 @@
     "                 'HFRXCA Index', 'HFRXEMC Index', 'HFRXCOM Index',\n",
     "                 'SECTGLMA Index', 'SECTNEUT Index','SECTMSTR Index',\n",
     "                 'HEDGGLMA Index', 'HEDGNAV Index','HEDGNEUT Index','HEDGCONV Index',\n",
-    "                 'CSLAB Index', 'CSLABED Index', 'CSLABGS Index']]\n",
+    "                 'CSLAB Index', 'CSLABED Index', 'CSLABGS Index', 'CSLABMF Index',\n",
+    "                 'CSLABT15 Index', 'CSLABT18 Index', 'CSLABT20 Index']]\n",
+    "#rename columns\n",
     "bmk_df.columns = ['HFRX Macro/CTA', 'HFRI Macro Total Index',\n",
     "                  'Eqty Risk Prem', 'Eqty Risk Prem-Hedged','SGI Cross Asset Trend', 'SG Trend Index',\n",
     "                  'HFRX Abs Ret', 'HFRX Eqty Hedge', 'HFRX Equal Wgtd', 'HFRX Event Driven',\n",
     "                  'HFRX RV FI Conv Arb', 'HFRX EM', 'HFRX Macro Comdty',\n",
     "                  'CS AllHedge Global Macro', 'CS AllHedge Eqty Mkt Neutral','CS AllHedge Multi_Strat',\n",
     "                  'CS Global Macro', 'CS Hedge Fund', 'CS Eqty Mkt Neutral', 'CS Conv Arb',\n",
-    "                 'CS Liq Alt Beta', 'CS Event Driven', 'CS Global Strat']\n",
+    "                 'CS Liq Alt Beta', 'CS Event Driven', 'CS Global Strat', 'CS Managed Fut',\n",
+    "                 'CS Managed Fut-15% vol','CS Managed Fut-18% vol', 'CS Managed Fut-20% vol']\n",
     "\n",
+    "#format data to returns\n",
     "bmk_df = dm.format_data(bmk_df)\n"
    ]
   },
@@ -209,27 +216,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "212a3bc6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35fce77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bmk_dict = {'Global Macro': ['HFRX Macro/CTA', 'HFRI Macro Total Index','HFRX Abs Ret', 'HFRX Eqty Hedge', \n",
-    "                             'HFRX Equal Wgtd', 'HFRX Event Driven','CS AllHedge Global Macro', \n",
-    "                             'CS AllHedge Eqty Mkt Neutral','CS AllHedge Multi_Strat',\n",
-    "                             'CS Global Macro', 'CS Hedge Fund', 'CS Eqty Mkt Neutral', 'CS Conv Arb','CS Liq Alt Beta', 'CS Event Driven', 'CS Global Strat']}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "537be258",
    "metadata": {},
@@ -324,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   },
   "varInspector": {
    "cols": {
