Fixed Cvar and var formatting

--- a/Equity-Hedge-Notebook-Maddie.ipynb
+++ b/Equity-Hedge-Notebook-Maddie.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -255,9 +255,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'returns' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m corr_freq_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDaily\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWeekly\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMonthly\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m corr_dict \u001b[38;5;241m=\u001b[39m summary\u001b[38;5;241m.\u001b[39mget_corr_data(\u001b[43mreturns\u001b[49m, corr_freq_list, weighted, notional_weights, include_fi)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'returns' is not defined"
+     ]
+    }
+   ],
    "source": [
     "corr_freq_list = ['Daily', 'Weekly', 'Monthly']\n",
     "corr_dict = summary.get_corr_data(returns, corr_freq_list, weighted, notional_weights, include_fi)"
@@ -593,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.9"
   },
   "varInspector": {
    "cols": {
